# releases-comm-central

./: .arcconfig  .clang-format  .clang-format-ignore  .cron.yml  .eslintignore  .eslintrc.js  .flake8  .gecko_rev.yml  .hg-annotate-ignore-revs  .hgignore  .hgtags  .isort.cfg  .prettierignore  .readthedocs.yaml  .stylelintignore  .stylelintrc.js  .taskcluster.yml  .yamllint  .ycm_extra_conf.py  AUTHORS  AUTHORS.md  Makefile.in  README.md  aclocal.m4  client.mk  client.py  comm-confvars.sh  configure.in  configure.py  eslint-ignores.config.mjs  eslint.config.mjs  mots.yaml  moz.build  moz.configure  pyproject.toml  try_task_config.json
im/: LICENSE.txt  Makefile.in  app-rules.mk  app.mozbuild  build.mk  configure.in  confvars.sh  makefiles.sh  moz.build  moz.configure
im/app/: Makefile.in  app-license.html  application.ini  autoLoginHandler.js  default.xpm  instantbird.exe.manifest  module.ver  module.ver.in  moz.build  mozicon50.xpm  mozilla.in  nsMain.cpp  profileMigrator.js  splash.rc
im/base/: Makefile.in
im/components/: Makefile.in  autoLoginHandler.js  autoLoginHandler.manifest  contentHandler.js  contentHandler.manifest  ibCommandLineHandler.js  ibCommandLineHandler.manifest  ibConvStatsService.js  ibConvStatsService.manifest  ibDockBadge.js  ibDockBadge.manifest  ibIConvStatsService.idl  ibILogger.idl  ibStatusCommandLineHandler.js  ibStatusCommandLineHandler.manifest  logger.js  moz.build  profileMigrator.js  profileMigrator.manifest  smileProtocolHandler.js
im/config/: version.txt
im/content/: Makefile.in  aboutDialog.css  aboutDialog.xul  aboutPanel.xml  account.js  account.xml  account.xul  accountWizard.css  accountWizard.js  accountWizard.xml  accountWizard.xul  accounts.css  accounts.js  accounts.xul  addbuddy.js  addbuddy.xul  blist.css  blist.js  blist.xul  browserRequest.js  browserRequest.xul  buddy.xml  buddytooltip.xml  contact.xml  conv.xml  convZoom.js  convbrowser.xml  conversation.xml  core.js  credits.xhtml  debugLog.html  debugLogPanel.xml  engineManager.js  engineManager.xul  extensions-discover.js  extensions-discover.xul  extensions.js  extensions.xul  group.xml  hiddenWindow.xul  (+32 more)
im/installer/: Makefile.in  allowed-dupes.mn  package-manifest.in  removed-files.in
im/locales/: Makefile.in  filter.py  jar.mn  l10n.ini
im/modules/: Makefile.in  ibCore.jsm  ibInterruptions.jsm  ibNotifications.jsm  ibSounds.jsm  ibTagMenu.jsm  ibWinJumpList.jsm  imContentSink.jsm  imServices.jsm  imSmileys.jsm  imStatusUtils.jsm  imTextboxUtils.jsm  imThemes.jsm  imWindows.jsm  moz.build
im/test/: xpcshell.ini
im/themes/: Makefile.in  accountWizard.css  accounts-aero.css  accounts.css  alert.css  blist-aero.css  blist.css  browserRequest.css  buddytooltip.css  conv.css  conversation-aero.css  conversation.css  debugLog.css  debugLogPanel.css  engineManager.css  instantbird-aero.css  instantbird.css  jar.mn  menulist.css  menus.css  moz.build  newtab.css  richlistbox.css  status.css  viewlog.css
mail/: .eslintrc.js  Makefile.in  app-system-headers.mozbuild  app.mozbuild  build.mk  check-sync-dirs.py  configure.in  confvars.sh  defs.mk  errors.json  metrics.yaml  moz.build  moz.configure  tags.yaml  testsuite-targets.mk
mail/actors/: BrowserProcessChild.sys.mjs  ChatActionChild.jsm  ChatActionChild.sys.mjs  ChatActionParent.jsm  ChatActionParent.sys.mjs  ContextMenuParent.jsm  ContextMenuParent.sys.mjs  LinkClickHandlerChild.jsm  LinkClickHandlerChild.sys.mjs  LinkClickHandlerParent.jsm  LinkClickHandlerParent.sys.mjs  LinkHandlerParent.jsm  LinkHandlerParent.sys.mjs  MailLinkChild.jsm  MailLinkChild.sys.mjs  MailLinkParent.jsm  MailLinkParent.sys.mjs  MailtoChild.jsm  MailtoParent.jsm  MessageScrollChild.sys.mjs  MessageScrollParent.sys.mjs  PromptParent.jsm  PromptParent.sys.mjs  VCardChild.jsm  VCardChild.sys.mjs  VCardParent.jsm  VCardParent.sys.mjs  moz.build
mail/app/: Makefile.in  StaticPrefList.yaml  blocklist.xml  jar.mn  macversion.py  module.ver  moz.build  nsMailApp.cpp  permissions  png.py  splash.rc  thunderbird.exe.manifest
mail/base/: jar.mn  moz.build
mail/branding/: branding-common.mozbuild
mail/components/: AboutRedirector.jsm  AboutRedirector.sys.mjs  AppIdleManager.jsm  AppIdleManager.sys.mjs  DownloadsStartup.js  MailComponents.manifest  MailContentHandler.jsm  MailGlue.jsm  MailGlue.sys.mjs  MessengerContentHandler.jsm  MessengerContentHandler.sys.mjs  MidProtocolHandler.jsm  StartupRecorder.jsm  StartupRecorder.sys.mjs  aboutRedirector.js  appIdleManager.js  components.conf  mailComponents.manifest  mailContentHandler.js  mailGlue.js  moz.build  nsIMailGlue.idl  nsMailDefaultHandler.js
mail/config/: version.txt  version_display.txt  whats_new_page.yml
mail/extensions/: built_in_addons.json  jar.mn  moz.build
mail/installer/: Makefile.in  allowed-dupes.mn  package-manifest.in  removed-files.in
mail/locales/: Makefile.in  all-locales  filter.py  generate_ini.py  jar.mn  l10n-aurora.ini  l10n-beta.ini  l10n-central.ini  l10n-changesets.json  l10n-onchange-changesets.json  l10n.ini  l10n.toml  moz.build  onchange-locales  shipped-locales
mail/modules/: AccountColorUtils.sys.mjs  AccountManagerUtils.sys.mjs  AppUpdateUI.jsm  AppUpdater.jsm  AttachmentChecker.jsm  AttachmentChecker.worker.js  AttachmentInfo.sys.mjs  BrowserWindowTracker.jsm  CommandController.mjs  ComposeUtils.sys.mjs  ConnectionNotifications.sys.mjs  ConversationOpener.jsm  ConversationOpener.sys.mjs  CustomElementLoader.sys.mjs  DBViewWrapper.jsm  DBViewWrapper.sys.mjs  DNS.jsm  DNS.sys.mjs  DNS.worker.mjs  DisplayNameUtils.jsm  DisplayNameUtils.sys.mjs  ExtensionSupport.jsm  ExtensionSupport.sys.mjs  ExtensionsUI.jsm  ExtensionsUI.sys.mjs  FolderPaneUtils.sys.mjs  FolderTreeProperties.jsm  FolderTreeProperties.sys.mjs  GlobalPopupNotifications.jsm  GlobalPopupNotifications.sys.mjs  LinkHelper.sys.mjs  MailConstants.jsm  MailConsts.jsm  MailConsts.sys.mjs  (+51 more)
rust/: Cargo.toml  checksums.json  mach_commands.py  moz.build
suite/: FIXME-PLACES.TXT  Makefile.in  app-config.mk  app.mozbuild  build.mk  configure.in  confvars.sh  moz.build  moz.configure
(+14416 files in other folders)
