dnl -*- Mode: Autoconf; tab-width: 4; indent-tabs-mode: nil; -*-
dnl vi: set tabstop=4 shiftwidth=4 expandtab:
dnl This Source Code Form is subject to the terms of the Mozilla Public
dnl License, v. 2.0. If a copy of the MPL was not distributed with this
dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.

dnl Process this file with autoconf to produce a configure script.
dnl ========================================================

AC_PREREQ(2.13)
AC_INIT(config/config.mk)
MOZILLA_SRCDIR=$srcdir/mozilla

# If MOZCONFIG isn't set, use the .mozconfig from the current directory. This
# overrides the lookup in mozilla-central's configure, which looks in the wrong
# directory for this file.
if test -z "$MOZCONFIG" -a -f $(dirname $0)/.mozconfig; then
    export MOZCONFIG=$(dirname $0)/.mozconfig
fi

# Execute the mozilla configure script in the current directory, adding the
# parameter we need to run comm-central.
exec ${MOZILLA_SRCDIR}/configure "$@" --with-external-source-dir="$(dirname $0)"

