dnl -*- Mode: Autoconf; tab-width: 2; indent-tabs-mode: nil; -*-
dnl vi: set tabstop=2 shiftwidth=2 expandtab:
dnl This Source Code Form is subject to the terms of the Mozilla Public
dnl License, v. 2.0. If a copy of the MPL was not distributed with this
dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.

dnl Things we need to carry from confvars.sh
AC_SUBST(INSTANTBIRD_VERSION)

if test -d $srcdir/extensions/purple ; then
  tmpscript=`$PYTHON -c 'import os, tempfile; print tempfile.mktemp(prefix="subscript.").replace(os.sep, "/")'` || exit 1
  m4 "${srcdir}/build/autoconf/subconfigure.m4" \
   "${srcdir}/build/autoconf/altoptions.m4" \
   "${srcdir}/extensions/purple/configure.in" > $tmpscript
  . $tmpscript
  rm -f $tmpscript

  MOZ_PURPLE=1
  AC_SUBST(MOZ_PURPLE)
fi
