dnl -*- Mode: Autoconf; tab-width: 2; indent-tabs-mode: nil; -*-
dnl vi: set tabstop=2 shiftwidth=2 expandtab:
dnl This Source Code Form is subject to the terms of the Mozilla Public
dnl License, v. 2.0. If a copy of the MPL was not distributed with this
dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.

dnl Things we need to carry from confvars.sh
AC_DEFINE(MOZ_THUNDERBIRD)
AC_SUBST(MOZ_THUNDERBIRD)
AC_SUBST(THUNDERBIRD_VERSION)
AC_SUBST(MOZ_BUNDLED_FONTS)

dnl More things we need to carry from confvars.sh
AC_SUBST(moztopsrcdir)
AC_SUBST(commtopsrcdir)
AC_SUBST(mozreltopsrcdir)
AC_SUBST(commreltopsrcdir)
AC_SUBST(commtopobjdir)

dnl Get other versions (for the calendar plugin)
SEAMONKEY_VERSION=`cat ${_topsrcdir}/../suite/config/version.txt`
AC_SUBST(SEAMONKEY_VERSION)
