[package]
name = "mozilla-central-workspace-hack"
version = "0.1.0"
license = "MPL-2.0"
description = "Thunderbird extensions to mozilla-central-workspace-hack"

[features]
gkrust = []


[workspace]
members = ['xpcom_async', 'moz_http', 'gkrust']

[workspace.dependencies]
uniffi = { version = "0.25.3" }
rusqlite = { version = "0.30.0" }

[patch.crates-io]
mozilla-central-workspace-hack = { path = "." }
cmake = { path = "../../build/rust/cmake" }
vcpkg = { path = "../../build/rust/vcpkg" }
mozbuild = { path = "../../build/rust/mozbuild" }
windows-targets = { path = "../../build/rust/windows-targets" }
windows-targets_0_48 = { package = "windows-targets", path = "../../build/rust/windows-targets-0.48" }
windows-sys = { path = "../../build/rust/windows-sys" }
windows = { path = "../../build/rust/windows" }
oslog = { path = "../../build/rust/oslog" }
terminal_size = { path = "../../build/rust/terminal_size" }
bitflags = { path = "../../build/rust/bitflags" }
memmap2_0_5 = { package = "memmap2", path = "../../build/rust/memmap2-0.5" }
memmap2 = { path = "../../build/rust/memmap2" }
cfg-if = { path = "../../build/rust/cfg-if" }
redox_users = { path = "../../build/rust/redox_users" }
redox_syscall = { path = "../../build/rust/redox_syscall" }
tinyvec = { path = "../../build/rust/tinyvec" }
base64 = { path = "../../build/rust/base64" }
wasi = { path = "../../build/rust/wasi" }
backtrace = { path = "../../build/rust/backtrace" }
bindgen_0_63 = { package = "bindgen", path = "../../build/rust/bindgen-0.63" }
nix = { path = "../../build/rust/nix" }
indexmap = { path = "../../build/rust/indexmap" }
derive_more = { path = "../../build/rust/derive_more" }
autocfg = { path = "../../third_party/rust/autocfg" }
goblin = { path = "../../build/rust/goblin" }
memoffset = { path = "../../build/rust/memoffset" }
js-sys = { path = "../../build/rust/dummy-web/js-sys" }
wasm-bindgen = { path = "../../build/rust/dummy-web/wasm-bindgen" }
web-sys = { path = "../../build/rust/dummy-web/web-sys" }
moz_asserts = { path = "../../mozglue/static/rust/moz_asserts" }
rure = { path = "../../third_party/rust/rure" }
cssparser = { git = "https://github.com/servo/rust-cssparser", rev = "aaa966d9d6ae70c4b8a62bb5e3a14c068bb7dff0" }
cssparser-macros = { git = "https://github.com/servo/rust-cssparser", rev = "aaa966d9d6ae70c4b8a62bb5e3a14c068bb7dff0" }
unicode-bidi = { git = "https://github.com/servo/unicode-bidi", rev = "ca612daf1c08c53abe07327cb3e6ef6e0a760f0c" }
chardetng = { git = "https://github.com/hsivonen/chardetng", rev = "3484d3e3ebdc8931493aa5df4d7ee9360a90e76b" }
chardetng_c = { git = "https://github.com/hsivonen/chardetng_c", rev = "ed8a4c6f900a90d4dbc1d64b856e61490a1c3570" }
coremidi = { git = "https://github.com/chris-zen/coremidi.git", rev = "fc68464b5445caf111e41f643a2e69ccce0b4f83" }
cose = { git = "https://github.com/franziskuskiefer/cose-rust", rev = "43c22248d136c8b38fe42ea709d08da6355cf04b" }
firefox-on-glean = { path = "../../toolkit/components/glean/api" }
icu_capi = { path = "../../intl/icu_capi" }
icu_segmenter_data = { path = "../../intl/icu_segmenter_data" }
libudev-sys = { path = "../../dom/webauthn/libudev-sys" }
midir = { git = "https://github.com/mozilla/midir.git", rev = "85156e360a37d851734118104619f86bd18e94c6" }
warp = { git = "https://github.com/seanmonstar/warp", rev = "9d081461ae1167eb321585ce424f4fef6cf0092b" }
malloc_size_of_derive = { path = "../../xpcom/rust/malloc_size_of_derive" }
interrupt-support = { git = "https://github.com/mozilla/application-services", rev = "9054db4bb5031881550ceab3448665ef6499a706" }
relevancy = { git = "https://github.com/mozilla/application-services", rev = "9054db4bb5031881550ceab3448665ef6499a706" }
sql-support = { git = "https://github.com/mozilla/application-services", rev = "9054db4bb5031881550ceab3448665ef6499a706" }
suggest = { git = "https://github.com/mozilla/application-services", rev = "9054db4bb5031881550ceab3448665ef6499a706" }
sync15 = { git = "https://github.com/mozilla/application-services", rev = "9054db4bb5031881550ceab3448665ef6499a706" }
tabs = { git = "https://github.com/mozilla/application-services", rev = "9054db4bb5031881550ceab3448665ef6499a706" }
viaduct = { git = "https://github.com/mozilla/application-services", rev = "9054db4bb5031881550ceab3448665ef6499a706" }
webext-storage = { git = "https://github.com/mozilla/application-services", rev = "9054db4bb5031881550ceab3448665ef6499a706" }
mio_0_8 = { package = "mio", git = "https://github.com/glandium/mio", rev = "9a2ef335c366044ffe73b1c4acabe50a1daefe05" }
mio = { path = "../../third_party/rust/mio-0.6.23" }

[patch."https://github.com/mozilla/uniffi-rs.git"]
uniffi = "=0.25.3"
uniffi_bindgen = "=0.25.3"
uniffi_build = "=0.25.3"
uniffi_macros = "=0.25.3"
weedle2 = "=4.0.0"
