[package]
name = "mozilla-central-workspace-hack"
version = "0.1.0"
license = "MPL-2.0"
description = "Thunderbird extensions to mozilla-central-workspace-hack"

[features]
gkrust = []
gkrust-gtest = ["gkrust"]


[workspace]
members = ['xpcom_async', 'moz_http', 'gkrust', 'ews_xpcom', 'gtest', 'sys_tray']

[workspace.dependencies]
uniffi = { version = "0.28.1" }
uniffi_bindgen = { version = "0.28.1" }
rusqlite = { version = "0.31.0" }
glean = { version = "=61.1.0" }

[target."cfg(windows)".dependencies.scopeguard]
version = "1"
optional = true

[target."cfg(windows)".dependencies.winapi]
version = "0.3.6"
features = [
 "avrt",
 "basetsd",
 "bits",
 "bits2_5",
 "bitsmsg",
 "cfg",
 "combaseapi",
 "consoleapi",
 "d3d11",
 "d3d11_1",
 "d3d11_2",
 "d3d11sdklayers",
 "d3d12",
 "d3d12sdklayers",
 "d3d12shader",
 "d3dcommon",
 "d3dcompiler",
 "dcomp",
 "dwrite",
 "dwrite_1",
 "dwrite_3",
 "dxgi1_2",
 "dxgi1_3",
 "dxgi1_4",
 "dxgi1_5",
 "dxgi1_6",
 "dxgidebug",
 "dxgiformat",
 "errhandlingapi",
 "evntrace",
 "fileapi",
 "guiddef",
 "handleapi",
 "hidclass",
 "hidpi",
 "hidusage",
 "impl-debug",
 "impl-default",
 "in6addr",
 "inaddr",
 "ioapiset",
 "knownfolders",
 "libloaderapi",
 "memoryapi",
 "minwinbase",
 "minwindef",
 "mmeapi",
 "mmsystem",
 "mswsock",
 "namedpipeapi",
 "ntdef",
 "ntsecapi",
 "ntstatus",
 "oaidl",
 "objbase",
 "oleauto",
 "processenv",
 "processthreadsapi",
 "profileapi",
 "psapi",
 "rpcndr",
 "setupapi",
 "shlobj",
 "std",
 "synchapi",
 "sysinfoapi",
 "taskschd",
 "timeapi",
 "timezoneapi",
 "unknwnbase",
 "winbase",
 "wincon",
 "wincrypt",
 "windef",
 "winerror",
 "wininet",
 "winioctl",
 "winnls",
 "winnt",
 "winreg",
 "winsock2",
 "winuser",
 "ws2def",
 "ws2ipdef",
 "ws2tcpip",
 "wtypes",
 "wtypesbase"
]

[target."cfg(windows)".dependencies.windows-sys]
version = "0.52"
optional = true
features = [
 "Wdk_Foundation",
 "Wdk_Storage",
 "Wdk_Storage_FileSystem",
 "Wdk_System_IO",
 "Wdk_System_Threading",
 "Win32_Foundation",
 "Win32_Globalization",
 "Win32_Graphics_Gdi",
 "Win32_Networking",
 "Win32_Networking_WinSock",
 "Win32_Security",
 "Win32_Security_Cryptography",
 "Win32_Security_Cryptography_Catalog",
 "Win32_Security_WinTrust",
 "Win32_Storage_FileSystem",
 "Win32_System_Com",
 "Win32_System_Diagnostics_Debug",
 "Win32_System_ErrorReporting",
 "Win32_System_IO",
 "Win32_System_Kernel",
 "Win32_System_LibraryLoader",
 "Win32_System_Memory",
 "Win32_System_Pipes",
 "Win32_System_ProcessStatus",
 "Win32_System_Registry",
 "Win32_System_SystemInformation",
 "Win32_System_SystemServices",
 "Win32_System_Threading",
 "Win32_System_WindowsProgramming",
 "Win32_UI_Controls",
 "Win32_UI_HiDpi",
 "Win32_UI_Input_KeyboardAndMouse",
 "Win32_UI_Shell",
 "Win32_UI_WindowsAndMessaging"
]

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies.core-foundation-sys]
version = "0.8"
optional = true

[patch.crates-io]
mozilla-central-workspace-hack = { path = "." }
cmake = { path = "../../build/rust/cmake" }
vcpkg = { path = "../../build/rust/vcpkg" }
mozbuild = { path = "../../build/rust/mozbuild" }
windows-targets = { path = "../../build/rust/windows-targets" }
windows = { path = "../../build/rust/windows" }
oslog = { path = "../../build/rust/oslog" }
terminal_size = { path = "../../build/rust/terminal_size" }
bitflags = { path = "../../build/rust/bitflags" }
redox_users = { path = "../../build/rust/redox_users" }
redox_syscall = { path = "../../build/rust/redox_syscall" }
hermit-abi = { path = "../../build/rust/hermit-abi" }
base64 = { path = "../../build/rust/base64" }
wasi = { path = "../../build/rust/wasi" }
backtrace = { path = "../../build/rust/backtrace" }
bindgen_0_63 = { package = "bindgen", path = "../../build/rust/bindgen-0.63" }
bindgen = { path = "../../third_party/rust/bindgen" }
nix = { path = "../../build/rust/nix" }
cfg_aliases = { path = "../../build/rust/cfg_aliases" }
indexmap = { path = "../../build/rust/indexmap" }
derive_more = { path = "../../build/rust/derive_more" }
autocfg = { path = "../../third_party/rust/autocfg" }
goblin = { path = "../../build/rust/goblin" }
memoffset = { path = "../../build/rust/memoffset" }
hashbrown = { path = "../../build/rust/hashbrown" }
socket2 = { path = "../../build/rust/socket2" }
js-sys = { path = "../../build/rust/dummy-web/js-sys" }
wasm-bindgen = { path = "../../build/rust/dummy-web/wasm-bindgen" }
web-sys = { path = "../../build/rust/dummy-web/web-sys" }
moz_asserts = { path = "../../mozglue/static/rust/moz_asserts" }
rure = { path = "../../third_party/rust/rure" }
plist = { path = "../../third_party/rust/plist" }
unicode-bidi = { git = "https://github.com/servo/unicode-bidi", rev = "ca612daf1c08c53abe07327cb3e6ef6e0a760f0c" }
any_all_workaround = { git = "https://github.com/hsivonen/any_all_workaround", rev = "7fb1b7034c9f172aade21ee1c8554e8d8a48af80" }
chardetng = { git = "https://github.com/hsivonen/chardetng", rev = "3484d3e3ebdc8931493aa5df4d7ee9360a90e76b" }
chardetng_c = { git = "https://github.com/hsivonen/chardetng_c", rev = "ed8a4c6f900a90d4dbc1d64b856e61490a1c3570" }
coremidi = { git = "https://github.com/chris-zen/coremidi.git", rev = "fc68464b5445caf111e41f643a2e69ccce0b4f83" }
cose = { git = "https://github.com/franziskuskiefer/cose-rust", rev = "43c22248d136c8b38fe42ea709d08da6355cf04b" }
firefox-on-glean = { path = "../../toolkit/components/glean/api" }
icu_capi = { path = "../../intl/icu_capi" }
icu_segmenter_data = { path = "../../intl/icu_segmenter_data" }
libudev-sys = { path = "../../dom/webauthn/libudev-sys" }
midir = { git = "https://github.com/mozilla/midir.git", rev = "85156e360a37d851734118104619f86bd18e94c6" }
malloc_size_of_derive = { path = "../../xpcom/rust/malloc_size_of_derive" }
interrupt-support = { git = "https://github.com/mozilla/application-services", rev = "b10c1319e74041b2777e07657fc83dc879f841f4" }
relevancy = { git = "https://github.com/mozilla/application-services", rev = "b10c1319e74041b2777e07657fc83dc879f841f4" }
sql-support = { git = "https://github.com/mozilla/application-services", rev = "b10c1319e74041b2777e07657fc83dc879f841f4" }
suggest = { git = "https://github.com/mozilla/application-services", rev = "b10c1319e74041b2777e07657fc83dc879f841f4" }
sync15 = { git = "https://github.com/mozilla/application-services", rev = "b10c1319e74041b2777e07657fc83dc879f841f4" }
tabs = { git = "https://github.com/mozilla/application-services", rev = "b10c1319e74041b2777e07657fc83dc879f841f4" }
viaduct = { git = "https://github.com/mozilla/application-services", rev = "b10c1319e74041b2777e07657fc83dc879f841f4" }
webext-storage = { git = "https://github.com/mozilla/application-services", rev = "b10c1319e74041b2777e07657fc83dc879f841f4" }
allocator-api2 = { path = "../../third_party/rust/allocator-api2" }
