[package]
name = "mozilla-central-workspace-hack"
version = "0.1.0"
license = "MPL-2.0"
description = "Thunderbird extensions to mozilla-central-workspace-hack"

[features]
gkrust = []
gkrust-gtest = ["gkrust"]

[workspace]
members = ['xpcom_async', 'moz_http', 'gkrust', 'ews_xpcom', 'gtest', 'sys_tray', 'mailnews_ui_glue']

[workspace.dependencies]
uniffi = { version = "0.29.3" }
uniffi_bindgen = { version = "0.29.3" }
uniffi_pipeline = { version = "0.29.3" }
rusqlite = { version = "0.37" }
glean = { version = "=65.1.1" }

[target."cfg(windows)".dependencies.scopeguard]
version = "1"
optional = true

[target."cfg(windows)".dependencies.winapi]
version = "0.3.6"
features = [
 "avrt",
 "basetsd",
 "bits",
 "bits2_5",
 "bitsmsg",
 "cfg",
 "combaseapi",
 "consoleapi",
 "d3d11",
 "d3d11_1",
 "d3d11_2",
 "d3d11sdklayers",
 "d3d12",
 "d3d12sdklayers",
 "d3d12shader",
 "d3dcommon",
 "d3dcompiler",
 "dcomp",
 "dwrite",
 "dwrite_1",
 "dwrite_3",
 "dxgi1_2",
 "dxgi1_3",
 "dxgi1_4",
 "dxgi1_5",
 "dxgi1_6",
 "dxgidebug",
 "dxgiformat",
 "errhandlingapi",
 "evntrace",
 "fileapi",
 "guiddef",
 "handleapi",
 "hidclass",
 "hidpi",
 "hidusage",
 "impl-debug",
 "impl-default",
 "in6addr",
 "inaddr",
 "ioapiset",
 "knownfolders",
 "libloaderapi",
 "memoryapi",
 "minwinbase",
 "minwindef",
 "mmeapi",
 "mmsystem",
 "mswsock",
 "namedpipeapi",
 "ntdef",
 "ntsecapi",
 "ntstatus",
 "oaidl",
 "objbase",
 "oleauto",
 "processenv",
 "processthreadsapi",
 "profileapi",
 "psapi",
 "rpcndr",
 "setupapi",
 "shlobj",
 "std",
 "synchapi",
 "sysinfoapi",
 "taskschd",
 "timeapi",
 "timezoneapi",
 "unknwnbase",
 "winbase",
 "wincon",
 "wincrypt",
 "windef",
 "winerror",
 "wininet",
 "winioctl",
 "winnls",
 "winnt",
 "winreg",
 "winsock2",
 "winuser",
 "ws2def",
 "ws2ipdef",
 "ws2tcpip",
 "wtypes",
 "wtypesbase"
]

[target."cfg(windows)".dependencies.windows]
version = "0.58"
optional = true
features = [
 "Win32_Foundation",
 "Win32_Graphics",
 "Win32_Graphics_Direct3D",
 "Win32_Graphics_Direct3D12",
 "Win32_Graphics_Direct3D_Dxc",
 "Win32_Graphics_Direct3D_Fxc",
 "Win32_Graphics_DirectComposition",
 "Win32_Graphics_Dxgi",
 "Win32_Graphics_Dxgi_Common",
 "Win32_NetworkManagement_IpHelper",
 "Win32_NetworkManagement_Ndis",
 "Win32_Networking_WinSock",
 "Win32_Security",
 "Win32_System",
 "Win32_System_Diagnostics",
 "Win32_System_Diagnostics_Debug",
 "Win32_System_Kernel",
 "Win32_System_Performance",
 "Win32_System_Threading",
 "Win32_UI",
 "Win32_UI_WindowsAndMessaging"
]

[target."cfg(windows)".dependencies.windows-sys]
version = "0.52"
optional = true
features = [
 "Wdk_Foundation",
 "Wdk_Storage",
 "Wdk_Storage_FileSystem",
 "Wdk_System_IO",
 "Wdk_System_Threading",
 "Win32_Foundation",
 "Win32_Globalization",
 "Win32_Graphics_Gdi",
 "Win32_Networking",
 "Win32_Networking_WinSock",
 "Win32_Security",
 "Win32_Security_Cryptography",
 "Win32_Security_Cryptography_Catalog",
 "Win32_Security_WinTrust",
 "Win32_Storage_FileSystem",
 "Win32_System_Com",
 "Win32_System_Diagnostics_Debug",
 "Win32_System_ErrorReporting",
 "Win32_System_IO",
 "Win32_System_Kernel",
 "Win32_System_LibraryLoader",
 "Win32_System_Memory",
 "Win32_System_Pipes",
 "Win32_System_ProcessStatus",
 "Win32_System_Registry",
 "Win32_System_SystemInformation",
 "Win32_System_SystemServices",
 "Win32_System_Threading",
 "Win32_System_WindowsProgramming",
 "Win32_UI_Controls",
 "Win32_UI_HiDpi",
 "Win32_UI_Input_KeyboardAndMouse",
 "Win32_UI_Shell",
 "Win32_UI_WindowsAndMessaging"
]

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies.core-foundation-sys]
version = "0.8"
optional = true

[patch.crates-io]
mozilla-central-workspace-hack = { path = "." }
cmake = { path = "../../build/rust/cmake" }
vcpkg = { path = "../../build/rust/vcpkg" }
mozbuild = { path = "../../build/rust/mozbuild" }
windows-targets = { path = "../../build/rust/windows-targets" }
windows = { path = "../../build/rust/windows" }
oslog = { path = "../../build/rust/oslog" }
terminal_size = { path = "../../build/rust/terminal_size" }
bitflags = { path = "../../build/rust/bitflags" }
r-efi = { path = "../../build/rust/r-efi" }
redox_users = { path = "../../build/rust/redox_users" }
redox_syscall = { path = "../../build/rust/redox_syscall" }
hermit-abi = { path = "../../build/rust/hermit-abi" }
base64_21 = { package = "base64", path = "../../build/rust/base64" }
wasi_0_11 = { package = "wasi", path = "../../build/rust/wasi" }
backtrace = { path = "../../build/rust/backtrace" }
bindgen_0_72 = { package = "bindgen", git = "https://github.com/rust-lang/rust-bindgen", rev = "9366e0af8da529c958b4cd4fcbe492d951c86f5c" }
bindgen = { path = "../../build/rust/bindgen" }
nix = { path = "../../build/rust/nix" }
autocfg = { path = "../../third_party/rust/autocfg" }
goblin = { path = "../../build/rust/goblin" }
getrandom = { path = "../../build/rust/getrandom" }
rustc-hash = { path = "../../build/rust/rustc-hash" }
memoffset = { path = "../../build/rust/memoffset" }
hashbrown_0_13 = { package = "hashbrown", path = "../../build/rust/hashbrown-0.13" }
hashbrown_0_14 = { package = "hashbrown", path = "../../build/rust/hashbrown" }
thiserror = { path = "../../build/rust/thiserror" }
thin-vec = { path = "../../third_party/rust/thin-vec" }
js-sys = { path = "../../build/rust/dummy-web/js-sys" }
wasm-bindgen = { path = "../../build/rust/dummy-web/wasm-bindgen" }
web-sys = { path = "../../build/rust/dummy-web/web-sys" }
core-foundation = { path = "../../build/rust/core-foundation" }
core-graphics-types = { path = "../../build/rust/core-graphics-types" }
half = { path = "../../build/rust/half" }
rusqlite = { path = "../../build/rust/rusqlite" }
itertools = { path = "../../build/rust/itertools" }
moz_asserts = { path = "../../mozglue/static/rust/moz_asserts" }
rure = { path = "../../third_party/rust/rure" }
unicode-width = { path = "../../build/rust/unicode-width" }
unicode-bidi = { git = "https://github.com/servo/unicode-bidi", rev = "ca612daf1c08c53abe07327cb3e6ef6e0a760f0c" }
nss-gk-api = { git = "https://github.com/beurdouche/nss-gk-api", rev = "e48a946811ffd64abc78de3ee284957d8d1c0d63" }
cssparser = { git = "https://github.com/servo/rust-cssparser", rev = "958a3f098acb92ddacdce18a7ef2c4a87ac3326f" }
any_all_workaround = { git = "https://github.com/hsivonen/any_all_workaround", rev = "7fb1b7034c9f172aade21ee1c8554e8d8a48af80" }
chardetng = { git = "https://github.com/hsivonen/chardetng", rev = "a07d20273ce36146adaf76bd667dd57bd7b3508b" }
chardetng_c = { git = "https://github.com/hsivonen/chardetng_c", rev = "2f0aba284677d098de14f91ffe5a9e5b9a4922c2" }
cose = { git = "https://github.com/franziskuskiefer/cose-rust", rev = "43c22248d136c8b38fe42ea709d08da6355cf04b" }
firefox-on-glean = { path = "../../toolkit/components/glean/api" }
icu_capi = { path = "../../intl/icu_capi" }
icu_segmenter_data = { path = "../../intl/icu_segmenter_data" }
libudev-sys = { path = "../../dom/webauthn/libudev-sys" }
midir = { git = "https://github.com/mozilla/midir.git", rev = "37ad39de3382c2aad0758dab49ba545331a2257d" }
malloc_size_of_derive = { path = "../../xpcom/rust/malloc_size_of_derive" }
wr_malloc_size_of = { path = "../../gfx/wr/wr_malloc_size_of" }
objc = { git = "https://github.com/glandium/rust-objc", rev = "4de89f5aa9851ceca4d40e7ac1e2759410c04324" }
allocator-api2 = { git = "https://github.com/glandium/allocator-api2", rev = "ad5f3d56a5a4519eff52af4ff85293431466ef5c" }
context_id = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
error-support = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
filter_adult = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
interrupt-support = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
relevancy = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
search = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
sql-support = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
suggest = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
sync15 = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
tabs = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
tracing-support = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
viaduct = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
webext-storage = { git = "https://github.com/mozilla/application-services", rev = "2f3f9cd624cc6f1e08b7540407e953daae602b82" }
zip = { path = "../../third_party/rust/zip" }
libcrux-traits = { path = "../../build/rust/libcrux-traits" }

[patch."https://github.com/mozilla/neqo"]
neqo-crypto = { path = "../../third_party/rust/neqo-crypto" }
neqo-common = { path = "../../third_party/rust/neqo-common" }
