[package]
name = "ews_xpcom"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.3"
cstr = "0.2"
ews = { git = "https://github.com/thunderbird/ews-rs.git", rev = "3975bdddc25e0498a537f1cdedf8789ec1e7eb2f", version = "0.1.0" }
fxhash = "0.2.1"
itertools = "0.10.5"
log = "0.4.21"
mail-parser = "0.9.3"
moz_http = { version = "0.1.0", path = "../moz_http" }
moz_task = { version = "0.1.0", path = "../../../xpcom/rust/moz_task" }
nserror = { version = "0.1.0", path = "../../../xpcom/rust/nserror" }
nsstring = { version = "0.1.0", path = "../../../xpcom/rust/nsstring" }
quick-xml = { version = "0.31.0", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.11"
thin-vec = { version = "0.2.12", features = ["gecko-ffi"] }
thiserror = "1.0.56"
url = "2.5.0"
uuid = { version = "1.3.0", features = ["v4"] }
xpcom = { version = "0.1.0", path = "../../../xpcom/rust/xpcom" }
xpcom_async = { version = "0.1.0", path = "../xpcom_async" }

[dependencies.mail-builder]
version = "0.3.2"
default-features = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
