[package]
name = "ews_xpcom"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
base64 = "0.21.3"
ews = { version = "0.1.0", features = ["interop"] }
firefox-on-glean = { version = "0.1.0", path = "../../../toolkit/components/glean/api" }
fxhash = "0.2.1"
http = "0.2.9"
log = "0.4.21"
mailnews_ui_glue = { version = "0.1.0", path = "../mailnews_ui_glue" }
moz_http = { version = "0.1.0", path = "../moz_http" }
moz_task = { version = "0.1.0", path = "../../../xpcom/rust/moz_task" }
nserror = { version = "0.1.0", path = "../../../xpcom/rust/nserror" }
nsstring = { version = "0.1.0", path = "../../../xpcom/rust/nsstring" }
oneshot = "0.1.11"
operation-queue = { version = "1.1.0" }
protocol_shared = { version = "0.1.0", path = "../protocol_shared" }
serde_json = "1.0.140"
serde_path_to_error = "0.1.11"
thin-vec = { version = "0.2.12", features = ["gecko-ffi"] }
thiserror = "1.0.56"
time = { version = "0.3.36", features = ["formatting", "parsing", "serde"] }
url = "2.5.0"
uuid = { version = "1.3.0", features = ["v4"] }
xpcom = { version = "0.1.0", path = "../../../xpcom/rust/xpcom" }

[lints]
workspace = true
